fix: margin on small displays

--- a/resources/sass/_media.scss
+++ b/resources/sass/_media.scss
@@ -1,3 +1,9 @@
+@media (max-width: 1000px) {
+  .with-margin {
+    margin: 0 10px;
+  }
+}
+
 @media (max-height: 450px) {
   .login-page .logo img {
     width: 160px;
